<resources>
    <string name="app_name">DowaYa-Pharmacy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_out">sign out</string>
    <string name="email_and_password">Email and Password</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign up</string>
    <string name="by_creating_an_account_you_agree_on">By creating an account, you agree on</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="finish_sign_up">Finish Sign-up</string>
    <string name="name_and_phone_number">Name and Phone Number</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="insufficient_password">Password must have more than 7 letters</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="name_not_number">Name must not contain numbers</string>
    <string name="insufficient_phone_number">Phone number must have 10 digits</string>
    <string name="title_activity_core">CoreActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">Android Studio</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_request">Request</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_header_phone">0123456789</string>
    <string name="random_description">Paracetamol ist ein schmerzlindernder und fiebersenkender Arzneistoff aus der Gruppe der Nichtopioid-Analgetika. In Nordamerika und im Iran ist die übliche Bezeichnung der Substanz Acetaminophen. Die Bezeichnung Paracetamol leitet sich vom chemischen Namen para-phenol ab.</string>
    <string name="random_link">https://en.wikipedia.org/wiki/Paracetamol</string>
    <string name="links">Links</string>
    <string name="locate_pharmacy">Locate Pharmacy</string>
    <string name="search_store">Search Store</string>
    <string name="description">Description</string>
    <string name="price_range">Price range</string>
    <string name="images">Images</string>
    <string name="address">Address</string>
    <string name="random_address">134 Beaulieu Oued-Smar</string>
    <string name="random_number">12345678910</string>
    <string name="open_maps">Open maps</string>
    <string name="menu_medicines">Medicines</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_history">History</string>
    <string name="empty_bookmark_list">No medicine is bookmarked</string>
    <string name="medicines">Medicines</string>
    <string name="stores">Stores</string>
    <string name="no_history">No history</string>
    <string name="edit_account">Edit my account</string>
    <string name="medicine_names">Medicine Name (s)</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_name_example">For ex: Paracetamol</string>
    <string name="optional">Optional:</string>
    <string name="random_email">zineddinebettouche@gmail.com</string>
    <string name="error_empty_fields">Error: empty fields</string>
    <string name="requests">Requests</string>
    <string name="random_date">20-02-2020</string>
    <string name="menu_post">Post</string>
    <string name="price_example">For ex: 500 DA</string>
    <string name="posts">Posts</string>
    <string name="price_unspecified">Price unspecified</string>
    <string name="no_description">No description</string>
    <string name="dose">Dose</string>
    <string name="random_dose">1 g</string>
    <string name="city">City</string>
    <string name="optional_description">Optional description</string>
    <string name="error_empty_name_city">A name and a city are mandatory</string>
    <string name="address_unspecified">Unspecified Address</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_requests">Requests</string>
    <string name="requesting_users">Requesting Users:</string>
    <string name="users">Users</string>
    <string name="menu_orientation">Orientation</string>
    <string name="create_medicine">Create Medicine</string>
    <string name="check">Check</string>
    <string name="create_account_signin">Sign in or create an account now!</string>
    <string name="next">next</string>
    <string name="from">from</string>
    <string name="team_name">Monks</string>
    <string name="name_phone_address">Name, phone, and address</string>
    <string name="name_unspecified">Name must be specified</string>
    <string name="city_unspecified">City must be specified</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="optional_image">Image (optional)</string>
    <string name="menu_my_activities">My Activities</string>
    <string name="created">Created</string>
    <string name="created_medicine">Created Medicines</string>
    <string name="random_price_range">220-240 DA</string>
    <string name="how_to_look_for_a_medicine">How to look for a medicine?</string>
    <string name="how_to_post_a_medicine">How to post a medicine?</string>
    <string name="how_to_delete_one_of_my_posts">How to delete one of my posts?</string>
    <string name="how_to_request_a_medicine">How to request a medicine?</string>
    <string name="how_to_delete_post_request">How to delete post/request?</string>
    <string name="how_to_reach_requesters">How to reach requesters?</string>
    <string name="how_to_set_provided_medicine_list">How to set provided medicine list?</string>
    <string name="how_to_delete_created_medicine">How to delete created medicine?</string>
    <string name="invalid_input">Invalid input</string>
</resources>
