<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_requests"
            android:icon="@drawable/ic_list_black"
            android:title="@string/menu_requests" />
        <item
            android:id="@+id/nav_medicine_list"
            android:icon="@drawable/ic_lens_black_24dp"
            android:title="@string/menu_medicines" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_orientation"
                android:icon="@drawable/ic_orientation_black"
                android:title="@string/menu_orientation" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
