<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_requests">

    <fragment
        android:id="@+id/nav_requests"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.RequestListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_request_list" />

    <fragment
        android:id="@+id/nav_medicine_list"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.MedicineListFragment"
        android:label="@string/menu_medicines"
        tools:layout="@layout/fragment_medicine_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.HistoryFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.dowaya_pharmacy.activities.core.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>