<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:id="@+id/requestTV"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:textColor="@color/green"
            android:gravity="center"/>
        <TextView
            android:id="@+id/userTV"
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/users"
            android:textColor="@color/dark_grey"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:textColor="@color/dark_grey"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:textColor="@color/dark_grey"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/emptyListTV"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_history"
        android:textColor="#000000"
        android:layout_gravity="center" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/requestRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>