<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/parentLayout">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_grey_100dp"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"
        android:contentDescription="@string/nav_header_desc" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_email_green_24dp"/>
        <TextView
            android:id="@+id/emailTV"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="40dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_person_green"/>
        <TextView
            android:id="@+id/nameTV"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/nameET"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/editNameIV"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_edit_green_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:src="@drawable/ic_phone_green_24dp" />
        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/phoneET"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="#000000"
            android:inputType="phone"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/editPhoneIV"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_edit_green_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_map_marker_green_24dp"/>
        <TextView
            android:id="@+id/addressTV"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
        <EditText
            android:id="@+id/addressET"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="40dp"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/editAddressIV"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_edit_green_24dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_file_green_24dp"/>
        <TextView
            android:id="@+id/termsTV"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="40dp"
            android:text="@string/terms_and_conditions"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/signOutTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textColor="#EE0000"
        android:textSize="14sp"
        android:layout_gravity="center"/>
</LinearLayout>